# parental-v2-client

./: CMakeLists.txt  LICENSE  README.md  install.bat  uninstall.bat
src/: command_handler.cpp  command_handler.h  config.cpp  config.h  device_id.cpp  device_id.h  logger.cpp  logger.h  main.cpp  overlay.cpp  overlay.h  tray.cpp  tray.h  websocket.cpp  websocket.h
